# ErdosNewsFinanceProject

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  run_data.ipynb
Math_134B/: 134B Week2.ipynb
Notebook/: All_News_EDA.ipynb  Classification.ipynb  EDA_All_News.ipynb  EDA_Example_All_News.ipynb  Test_news_ingestion.ipynb  Test_news_preprocess.ipynb  Test_preprocessing_main.ipynb  all_news_topics.ipynb  explore_hdp.ipynb  run_data.ipynb
config/: predict_stock_w_news.toml
src/: predict_stock_w_news.py
src/engine/clean/: News_data_preprocessing.py  clean_All_news.py  clean_stock_driver.py
src/engine/ingestion/: Get_data_All_news.py  ingest_All_news.py  ingest_fin_driver.py  ingest_stock_driver.py
src/engine/model_eval/: prediction_eval.py
src/engine/model_fin/: fin_model_driver.py
src/engine/model_news/: news_model_classify.py  news_model_driver.py
src/engine/model_predict/: Fin_prediction.py
src/utils/: logging_tool.py
tests/test_env/.ipynb_checkpoints/: test-checkpoint.ipynb
