[tool.poetry]
name = "erdosnewsfinanceproject"
version = "0.1.0"
description = ""
authors = ["XW Peng <26990979+xpeng-26@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.2"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
logging = "^0.4.9.6"
datetime = "^5.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
dask = "^2024.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
