[tool.poetry]
name = "erdosnewsfinanceproject"
version = "0.1.0"
description = ""
authors = ["XW Peng <26990979+xpeng-26@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
logging = "^0.4.9.6"
datetime = "^5.5"
tomli-w = "^1.1.0"
yahoo-fin = "^0.8.9.1"
requests-html = "^0.10.0"
nltk = "^3.9.1"
matlib = "^0.1.2"
spacy = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
